# LaMoKey

./: BUILD_GUIDE.md  CHANGELOG.md  README.md  version.json
.github/workflows/: msbuild.yml
Sources/: README.md
Sources/LaMoKey/engine/: ConvertTool.cpp  ConvertTool.h  DataType.h  Engine.cpp  Engine.h  Macro.cpp  Macro.h  SmartSwitchKey.cpp  SmartSwitchKey.h  Vietnamese.cpp  Vietnamese.h
Sources/LaMoKey/linux/: CMakeLists.txt  README.md  update_check.cpp  version_config.h.in
Sources/LaMoKey/linux/fcitx5-lamokey/: lamokey-addon.conf.in.in  lamokey.conf.in  lamokey_engine.cpp  lamokey_engine.h
Sources/LaMoKey/macOS/LaMoKey.xcodeproj/: project.pbxproj
Sources/LaMoKey/macOS/LaMoKeyHelper/: AppDelegate.h  AppDelegate.m  main.m
Sources/LaMoKey/macOS/ModernKey/: AboutViewController.h  AboutViewController.m  AppDelegate.h  AppDelegate.m  ConvertToolViewController.h  ConvertToolViewController.mm  Info.plist  LaMoKey.mm  LaMoKeyManager.h  LaMoKeyManager.m  MJAccessibilityUtils.h  MJAccessibilityUtils.m  MacroViewController.h  MacroViewController.mm  MyTextField.h  MyTextField.m  ViewController.h  ViewController.m
Sources/LaMoKey/macOS/ModernKey/Base.lproj/: Main.storyboard
Sources/LaMoKey/macOS/ModernKey/vi-VN.lproj/: Main.strings
Sources/LaMoKey/win32/: README.md
Sources/LaMoKey/win32/LaMoKey/: LaMoKey.sln
Sources/LaMoKey/win32/LaMoKey/LaMoKey/: AboutDialog.cpp  AboutDialog.h  AppDelegate.cpp  AppDelegate.h  BaseDialog.cpp  BaseDialog.h  ConvertToolDialog.cpp  ConvertToolDialog.h  LaMoKey.cpp  LaMoKey.rc  LaMoKey.vcxproj  LaMoKey.vcxproj.filters  LaMoKeyHelper.cpp  LaMoKeyHelper.h  (+14 more)
(+12 files in other folders)
